@@ -33,11 +33,12 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 SET(CMAKE_BUILD_TYPE RELEASE)
 
-# Matlab's mex compiler requires an older version of gcc than the
-# default at the time of this writing, so we have to force the version
-# we want
-SET(CMAKE_CC_COMPILER gcc-4.3)
-SET(CMAKE_CXX_COMPILER g++-4.3)
+# If Matlab's libraries were built with a version of gcc incompatible
+# with the default in your system, you can force the correct version
+# uncommenting the two lines below. However, this may cause problems
+# with libraries of the wrong version trying to be used
+#SET(CMAKE_CC_COMPILER gcc-4.3) 
+#SET(CMAKE_CXX_COMPILER g++-4.3)
 
 PROJECT(GERARDUS_MATLAB)
 
